ré-éxécute les traitements pour les législatives de 2022 et 2024

--- a/prep_lg2022.ipynb
+++ b/prep_lg2022.ipynb
@@ -10,13 +10,15 @@
     "import pandas as pd\n",
     "from io import StringIO\n",
     "import requests\n",
-    "from tqdm import tqdm"
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "96f3da68-7869-4982-8726-bfad81b0b098",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## récupère la liste des circonscriptions"
    ]
@@ -228,7 +230,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 107/107 [05:25<00:00,  3.04s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 107/107 [06:32<00:00,  3.67s/it]\n"
      ]
     },
     {
@@ -657,7 +659,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 577/577 [00:44<00:00, 12.86it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 577/577 [01:03<00:00,  9.15it/s]\n"
      ]
     },
     {
@@ -959,7 +961,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 577/577 [00:44<00:00, 13.07it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 577/577 [01:01<00:00,  9.37it/s]\n"
      ]
     }
    ],
@@ -1026,7 +1028,7 @@
     "    .set_index('CodCirc2')\n",
     "    [['Nombre']]\n",
     "    .rename({ 'Nombre': 'inscrits' }, axis=1)\n",
-    "    .to_csv('lg2022_inscrits.csv')\n",
+    "    .to_csv('lg2022/t1_inscrits.csv')\n",
     ")"
    ]
   },
@@ -1071,7 +1073,7 @@
     "(\n",
     "    resultats_2022_t1_2\n",
     "    .to_csv(\n",
-    "        'lg2022_t1_resultats.csv',\n",
+    "        'lg2022/t1_resultats.csv',\n",
     "        index=False\n",
     "    )\n",
     ")"
@@ -1159,7 +1161,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 44%|█████████████████████████████████▉                                            | 251/577 [06:26<00:30, 10.60it/s]"
+      " 43%|█████████████████████████████████▊                                            | 250/577 [00:28<01:21,  3.99it/s]"
      ]
     },
     {
@@ -1173,7 +1175,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 68%|████████████████████████████████████████████████████▉                         | 392/577 [06:40<00:17, 10.52it/s]"
+      " 68%|█████████████████████████████████████████████████████▏                        | 393/577 [00:43<00:20,  9.13it/s]"
      ]
     },
     {
@@ -1187,7 +1189,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 70%|██████████████████████████████████████████████████████▍                       | 403/577 [06:41<00:16, 10.30it/s]"
+      " 70%|██████████████████████████████████████████████████████▎                       | 402/577 [00:44<00:20,  8.64it/s]"
      ]
     },
     {
@@ -1202,7 +1204,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 89%|█████████████████████████████████████████████████████████████████████▍        | 514/577 [06:53<00:05, 11.21it/s]"
+      " 89%|█████████████████████████████████████████████████████████████████████▌        | 515/577 [00:56<00:06, 10.01it/s]"
      ]
     },
     {
@@ -1216,7 +1218,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 577/577 [06:59<00:00,  1.38it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 577/577 [01:02<00:00,  9.16it/s]\n"
      ]
     },
     {
@@ -1713,7 +1715,7 @@
     "(\n",
     "    resultats_2022_t2_2\n",
     "    .to_csv(\n",
-    "        'lg2022_t2_resultats.csv',\n",
+    "        'lg2022/t2_resultats.csv',\n",
     "        index=False\n",
     "    )\n",
     ")"
