--- a/prep_lg2024.ipynb
+++ b/prep_lg2024.ipynb
@@ -733,6 +733,20 @@
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bd57ec427d3f4fdb8796449c448e1ebf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/577 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -939,7 +953,7 @@
     "candidats_2024_t1 = pd.concat(\n",
     "    [\n",
     "        get_candidats_t1(circonscription)\n",
-    "        for circonscription in circonscriptions.index.to_list()\n",
+    "        for circonscription in tqdm(circonscriptions.index.to_list())\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -2184,7 +2198,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e00e53c34e34eb697da74e88e9ae637",
+       "model_id": "10e43100bf6846bbb0699b25b932e018",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2952,7 +2966,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resultats_t1_2.to_csv('lg2024_t1_resultats.csv', index=False)"
+    "resultats_t1_2.to_csv('lg2024/t1_resultats.csv', index=False)"
    ]
   },
   {
@@ -2964,7 +2978,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd253754d69942ecbcd956a1a231219d",
+       "model_id": "f52638dd9cb04b8c8901edc6c3eff50e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3321,7 +3335,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inscrits_t1_2.to_csv('lg2024_t1_inscrits.csv')"
+    "inscrits_t1_2.to_csv('lg2024/t1_inscrits.csv')"
    ]
   },
   {
@@ -3349,7 +3363,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "837a7f346cb7402193c3de29fd5c277e",
+       "model_id": "26250f183aac4f85aac730d3ff9264c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3620,7 +3634,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "candidats_2024_t2.to_csv('lg2024_t2_candidats.csv', index=False)"
+    "candidats_2024_t2.to_csv('lg2024/t2_candidats.csv', index=False)"
    ]
   }
  ],
