ajoute les nombres d'inscrits par circonscription au second tour

--- a/prep_lg2017.ipynb
+++ b/prep_lg2017.ipynb
@@ -257,7 +257,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bb4a4624eed4d8fa38daeb03629eee8",
+       "model_id": "43c6e3e76dc14d2d82a1a7e2877cf6e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -419,7 +419,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56f432d38bf54a3ca5b59a48758a1560",
+       "model_id": "524a75ea1c4147ef860d0ae105c4318a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -751,7 +751,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae33e0ee0cba440686f6d47c45d37d63",
+       "model_id": "a7145d0656924cf4a241fa5e356a2aeb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1070,7 +1070,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3891716408fa4263b7b17fd19f8715c7",
+       "model_id": "955d2f297d734a4389da2dcf853117ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1210,9 +1210,8 @@
     "            )\n",
     "            .rename({'Nombre': 'Inscrits'}, axis=1)\n",
     "        )\n",
-    "    except e:\n",
+    "    except:\n",
     "        print('error', url)\n",
-    "        print(e)\n",
     "    \n",
     "    return results\n",
     "\n",
@@ -1240,11 +1239,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c5727de7-f954-4f7d-a70a-bcd538fb6de9",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f1bffe04f1564dec9d3c0a195e163f52",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/577 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "error https://www.archives-resultats-elections.interieur.gouv.fr/telechargements/LG2017/resultatsT2/056/05604.xml\n",
+      "error https://www.archives-resultats-elections.interieur.gouv.fr/telechargements/LG2017/resultatsT2/075/07501.xml\n",
+      "error https://www.archives-resultats-elections.interieur.gouv.fr/telechargements/LG2017/resultatsT2/080/08005.xml\n",
+      "error https://www.archives-resultats-elections.interieur.gouv.fr/telechargements/LG2017/resultatsT2/986/98601.xml\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Inscrits</th>\n",
+       "      <th>CodCirc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>82673</td>\n",
+       "      <td>00101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>93507</td>\n",
+       "      <td>00102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>75548</td>\n",
+       "      <td>00103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>89382</td>\n",
+       "      <td>00104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>75289</td>\n",
+       "      <td>00105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>105946</td>\n",
+       "      <td>09907</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>121386</td>\n",
+       "      <td>09908</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>107778</td>\n",
+       "      <td>09909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>99956</td>\n",
+       "      <td>09910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>92761</td>\n",
+       "      <td>09911</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>573 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Inscrits CodCirc\n",
+       "0     82673   00101\n",
+       "0     93507   00102\n",
+       "0     75548   00103\n",
+       "0     89382   00104\n",
+       "0     75289   00105\n",
+       "..      ...     ...\n",
+       "0    105946   09907\n",
+       "0    121386   09908\n",
+       "0    107778   09909\n",
+       "0     99956   09910\n",
+       "0     92761   09911\n",
+       "\n",
+       "[573 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t2_inscrits = (\n",
+    "    pd.concat(\n",
+    "        [\n",
+    "            get_inscrits(c,2)\n",
+    "            for idx, c in tqdm(list(circonscriptions.iterrows()))\n",
+    "        ]\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "t2_inscrits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e25468fb-e94d-48bf-8e04-e0a1d25942db",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "t2_inscrits.to_csv('lg2017/t2_inscrits.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
