--- a/prep_lg2022.ipynb
+++ b/prep_lg2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "79ebed78-5f38-4b8c-b8e9-cc3141cc68fa",
    "metadata": {},
    "outputs": [],
@@ -25,17 +25,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "be37ae67-df0e-4491-9b6e-0d9c578407d6",
+   "execution_count": 11,
+   "id": "ee43f908-e368-465e-a3ec-ee09343b8881",
    "metadata": {},
    "outputs": [],
    "source": [
-    "circonscriptions_url = 'https://www.archives-resultats-elections.interieur.gouv.fr/telechargements/LG2022/referenceLG/listeregdptcom.xml'"
+    "base = 'https://www.archives-resultats-elections.interieur.gouv.fr/telechargements/LG2022/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "id": "be37ae67-df0e-4491-9b6e-0d9c578407d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "circonscriptions_url = f'{base}referenceLG/listeregdptcom.xml'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "7e348205-b012-4d76-8654-a6aff6d89ad2",
    "metadata": {},
    "outputs": [
@@ -203,7 +213,7 @@
        "[107 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,16 +232,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "a7d07a8f-32e6-4ac0-add1-f72a5a2f9cad",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 107/107 [06:32<00:00,  3.67s/it]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4a4bf4d239534c47bca2b45c0b5d8297",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/107 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -266,7 +283,7 @@
        "      <th>0</th>\n",
        "      <td>101</td>\n",
        "      <td>Les Abymes</td>\n",
-       "      <td>1</td>\n",
+       "      <td>01</td>\n",
        "      <td>Les Abymes - 1ère circonscription</td>\n",
        "      <td>971</td>\n",
        "    </tr>\n",
@@ -274,7 +291,7 @@
        "      <th>1</th>\n",
        "      <td>102</td>\n",
        "      <td>Anse-Bertrand</td>\n",
-       "      <td>2</td>\n",
+       "      <td>02</td>\n",
        "      <td>Anse-Bertrand - 2ème circonscription</td>\n",
        "      <td>971</td>\n",
        "    </tr>\n",
@@ -282,7 +299,7 @@
        "      <th>2</th>\n",
        "      <td>103</td>\n",
        "      <td>Baie-Mahault</td>\n",
-       "      <td>3</td>\n",
+       "      <td>03</td>\n",
        "      <td>Baie-Mahault - 3ème circonscription</td>\n",
        "      <td>971</td>\n",
        "    </tr>\n",
@@ -290,7 +307,7 @@
        "      <th>3</th>\n",
        "      <td>104</td>\n",
        "      <td>Baillif</td>\n",
-       "      <td>4</td>\n",
+       "      <td>04</td>\n",
        "      <td>Baillif - 4ème circonscription</td>\n",
        "      <td>971</td>\n",
        "    </tr>\n",
@@ -298,7 +315,7 @@
        "      <th>4</th>\n",
        "      <td>105</td>\n",
        "      <td>Basse-Terre</td>\n",
-       "      <td>4</td>\n",
+       "      <td>04</td>\n",
        "      <td>Basse-Terre - 4ème circonscription</td>\n",
        "      <td>971</td>\n",
        "    </tr>\n",
@@ -314,7 +331,7 @@
        "      <th>205</th>\n",
        "      <td>229</td>\n",
        "      <td>Zurich</td>\n",
-       "      <td>6</td>\n",
+       "      <td>06</td>\n",
        "      <td>Zurich - 6ème circonscription</td>\n",
        "      <td>99</td>\n",
        "    </tr>\n",
@@ -338,7 +355,7 @@
        "      <th>208</th>\n",
        "      <td>234</td>\n",
        "      <td>Monterrey</td>\n",
-       "      <td>2</td>\n",
+       "      <td>02</td>\n",
        "      <td>Monterrey - 2ème circonscription</td>\n",
        "      <td>99</td>\n",
        "    </tr>\n",
@@ -346,7 +363,7 @@
        "      <th>209</th>\n",
        "      <td>235</td>\n",
        "      <td>Bahamas (Nassau)</td>\n",
-       "      <td>2</td>\n",
+       "      <td>02</td>\n",
        "      <td>Bahamas (Nassau) - 2ème circonscription</td>\n",
        "      <td>99</td>\n",
        "    </tr>\n",
@@ -356,18 +373,18 @@
        "</div>"
       ],
       "text/plain": [
-       "    CodSubCom         LibSubCom  CodCirLg  \\\n",
-       "0         101        Les Abymes         1   \n",
-       "1         102     Anse-Bertrand         2   \n",
-       "2         103      Baie-Mahault         3   \n",
-       "3         104           Baillif         4   \n",
-       "4         105       Basse-Terre         4   \n",
-       "..        ...               ...       ...   \n",
-       "205       229            Zurich         6   \n",
-       "206       231            Taipei        11   \n",
-       "207       233      Nour-Soultan        11   \n",
-       "208       234         Monterrey         2   \n",
-       "209       235  Bahamas (Nassau)         2   \n",
+       "    CodSubCom         LibSubCom CodCirLg  \\\n",
+       "0         101        Les Abymes       01   \n",
+       "1         102     Anse-Bertrand       02   \n",
+       "2         103      Baie-Mahault       03   \n",
+       "3         104           Baillif       04   \n",
+       "4         105       Basse-Terre       04   \n",
+       "..        ...               ...      ...   \n",
+       "205       229            Zurich       06   \n",
+       "206       231            Taipei       11   \n",
+       "207       233      Nour-Soultan       11   \n",
+       "208       234         Monterrey       02   \n",
+       "209       235  Bahamas (Nassau)       02   \n",
        "\n",
        "                                LibFraSubCom CodMinDpt  \n",
        "0          Les Abymes - 1ère circonscription       971  \n",
@@ -385,7 +402,7 @@
        "[35500 rows x 5 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,6 +414,7 @@
     "        .read_xml(\n",
     "            circonscriptions_url,\n",
     "            xpath = f'.//Departement[./CodMinDpt = \"{CodMinDpt}\"]//Commune',\n",
+    "            dtype='object'\n",
     "        )\n",
     "        .assign(\n",
     "            CodMinDpt = CodMinDpt\n",
@@ -410,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "6be2e668-a68b-41be-a65a-e7734e763def",
    "metadata": {},
    "outputs": [
@@ -449,7 +467,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>01</td>\n",
-       "      <td>1</td>\n",
+       "      <td>01</td>\n",
        "      <td>82</td>\n",
        "      <td>01</td>\n",
        "      <td>001</td>\n",
@@ -460,7 +478,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>01</td>\n",
-       "      <td>2</td>\n",
+       "      <td>02</td>\n",
        "      <td>58</td>\n",
        "      <td>01</td>\n",
        "      <td>001</td>\n",
@@ -471,7 +489,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>01</td>\n",
-       "      <td>3</td>\n",
+       "      <td>03</td>\n",
        "      <td>64</td>\n",
        "      <td>01</td>\n",
        "      <td>001</td>\n",
@@ -482,7 +500,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>01</td>\n",
-       "      <td>4</td>\n",
+       "      <td>04</td>\n",
        "      <td>89</td>\n",
        "      <td>01</td>\n",
        "      <td>001</td>\n",
@@ -493,7 +511,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>01</td>\n",
-       "      <td>5</td>\n",
+       "      <td>05</td>\n",
        "      <td>102</td>\n",
        "      <td>01</td>\n",
        "      <td>001</td>\n",
@@ -515,7 +533,7 @@
        "    <tr>\n",
        "      <th>572</th>\n",
        "      <td>99</td>\n",
-       "      <td>7</td>\n",
+       "      <td>07</td>\n",
        "      <td>22</td>\n",
        "      <td>ZZ</td>\n",
        "      <td>099</td>\n",
@@ -526,7 +544,7 @@
        "    <tr>\n",
        "      <th>573</th>\n",
        "      <td>99</td>\n",
-       "      <td>8</td>\n",
+       "      <td>08</td>\n",
        "      <td>12</td>\n",
        "      <td>ZZ</td>\n",
        "      <td>099</td>\n",
@@ -537,7 +555,7 @@
        "    <tr>\n",
        "      <th>574</th>\n",
        "      <td>99</td>\n",
-       "      <td>9</td>\n",
+       "      <td>09</td>\n",
        "      <td>18</td>\n",
        "      <td>ZZ</td>\n",
        "      <td>099</td>\n",
@@ -573,18 +591,18 @@
        "</div>"
       ],
       "text/plain": [
-       "    CodMinDpt  CodCirLg  CodSubCom CodDpt CodDpt3Car  NumOrdDpt  \\\n",
-       "0          01         1         82     01        001          1   \n",
-       "1          01         2         58     01        001          1   \n",
-       "2          01         3         64     01        001          1   \n",
-       "3          01         4         89     01        001          1   \n",
-       "4          01         5        102     01        001          1   \n",
-       "..        ...       ...        ...    ...        ...        ...   \n",
-       "572        99         7         22     ZZ        099        108   \n",
-       "573        99         8         12     ZZ        099        108   \n",
-       "574        99         9         18     ZZ        099        108   \n",
-       "575        99        10         47     ZZ        099        108   \n",
-       "576        99        11         49     ZZ        099        108   \n",
+       "    CodMinDpt CodCirLg  CodSubCom CodDpt CodDpt3Car  NumOrdDpt  \\\n",
+       "0          01       01         82     01        001          1   \n",
+       "1          01       02         58     01        001          1   \n",
+       "2          01       03         64     01        001          1   \n",
+       "3          01       04         89     01        001          1   \n",
+       "4          01       05        102     01        001          1   \n",
+       "..        ...      ...        ...    ...        ...        ...   \n",
+       "572        99       07         22     ZZ        099        108   \n",
+       "573        99       08         12     ZZ        099        108   \n",
+       "574        99       09         18     ZZ        099        108   \n",
+       "575        99       10         47     ZZ        099        108   \n",
+       "576        99       11         49     ZZ        099        108   \n",
        "\n",
        "                              LibDpt        Communes  \n",
        "0                                Ain  \\n              \n",
@@ -602,7 +620,7 @@
        "[577 rows x 8 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,16 +971,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "bc2d3618-0023-44b6-b1f3-c5a1876e1308",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 577/577 [01:01<00:00,  9.37it/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82abf653ccc44c309fd5274bdb11f25c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/577 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -999,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "ace687ed-8e09-4d76-9984-e38b27a75e32",
    "metadata": {},
    "outputs": [],
@@ -1027,7 +1052,7 @@
     "    )\n",
     "    .set_index('CodCirc2')\n",
     "    [['Nombre']]\n",
-    "    .rename({ 'Nombre': 'inscrits' }, axis=1)\n",
+    "    .rename({ 'Nombre': 'Inscrits' }, axis=1)\n",
     "    .to_csv('lg2022/t1_inscrits.csv')\n",
     ")"
    ]
@@ -2042,8 +2067,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "id": "1e0cac85-319f-4991-81e2-f9ab7bfe2931",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aa4f18cceb374937af6f50fd8e842aeb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/577 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "error https://www.archives-resultats-elections.interieur.gouv.fr/telechargements/LG2022/resultatsT2/053/05303.xml\n",
+      "error https://www.archives-resultats-elections.interieur.gouv.fr/telechargements/LG2022/resultatsT2/075/07506.xml\n",
+      "error https://www.archives-resultats-elections.interieur.gouv.fr/telechargements/LG2022/resultatsT2/075/07516.xml\n",
+      "error https://www.archives-resultats-elections.interieur.gouv.fr/telechargements/LG2022/resultatsT2/075/07517.xml\n",
+      "error https://www.archives-resultats-elections.interieur.gouv.fr/telechargements/LG2022/resultatsT2/093/09307.xml\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Inscrits</th>\n",
+       "      <th>CodCirc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>86194</td>\n",
+       "      <td>00101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>99979</td>\n",
+       "      <td>00102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>82207</td>\n",
+       "      <td>00103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>94903</td>\n",
+       "      <td>00104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>77466</td>\n",
+       "      <td>00105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>123403</td>\n",
+       "      <td>09907</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>131216</td>\n",
+       "      <td>09908</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>120553</td>\n",
+       "      <td>09909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>104452</td>\n",
+       "      <td>09910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>98847</td>\n",
+       "      <td>09911</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>572 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Inscrits CodCirc\n",
+       "0     86194   00101\n",
+       "0     99979   00102\n",
+       "0     82207   00103\n",
+       "0     94903   00104\n",
+       "0     77466   00105\n",
+       "..      ...     ...\n",
+       "0    123403   09907\n",
+       "0    131216   09908\n",
+       "0    120553   09909\n",
+       "0    104452   09910\n",
+       "0     98847   09911\n",
+       "\n",
+       "[572 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_inscrits(c, tour):\n",
+    "    results = None\n",
+    "    url = f'{base}resultatsT{tour}/{c.CodDpt3Car}/{c.CodDpt3Car}{c.CodCirLg}.xml'\n",
+    "    try:\n",
+    "        results = (\n",
+    "            pd\n",
+    "            .read_xml(\n",
+    "                url,\n",
+    "                xpath=f'.//Tour[./NumTour = {tour}]/Mentions/Inscrits',\n",
+    "                dtype=\"object\"\n",
+    "            )\n",
+    "            .assign(\n",
+    "                CodCirc = c['CodDpt3Car'] + c['CodCirLg'],\n",
+    "            )\n",
+    "            .rename({'Nombre': 'Inscrits'}, axis=1)\n",
+    "        )\n",
+    "    except:\n",
+    "        print('error', url)\n",
+    "    \n",
+    "    return results\n",
+    "\n",
+    "t2_inscrits = (\n",
+    "    pd.concat(\n",
+    "        [\n",
+    "            get_inscrits(c,2)\n",
+    "            for idx, c in tqdm(list(circonscriptions.iterrows()))\n",
+    "        ]\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "t2_inscrits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "aaaa7b30-4617-41b2-98cd-615182f54420",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t2_inscrits.to_csv('lg2022/t2_inscrits.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8aa5215c-2ae8-47bf-b0a5-57b1a0fb5886",
    "metadata": {},
    "outputs": [],
    "source": []
